--- a/src/app/search-images/search-images.component.html
+++ b/src/app/search-images/search-images.component.html
@@ -11,8 +11,11 @@
   </div>
 
   <div *ngIf="imagesAreShown; else noImages">
+    <pagination-controls (pageChange)="p = $event" class="pagination justify-content-right">
+    </pagination-controls>
+
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images">
+      <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images | paginate: { itemsPerPage: 6, currentPage: p }">
         <div class="card">
           <a href="{{image.url}}_b.jpg">
             <img
@@ -30,17 +33,4 @@
     <p>No images here. Would you try to search for anything else?</p>
   </ng-template>
 
-<!--   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images">
-      <div class="card">
-        <a href="{{image.url}}_b.jpg">
-          <img
-            src="{{image.url}}_m.jpg"
-            title="{{image.title}}"
-            alt="{{image.title}}"
-          >
-        </a>
-      </div>
-    </div>
-  </div> -->
 </div>
