--- a/src/app/search-images/search-images.component.html
+++ b/src/app/search-images/search-images.component.html
@@ -13,9 +13,9 @@
   <div *ngIf="imagesAreShown; else noImages">
     <pagination-controls (pageChange)="p = $event" class="pagination justify-content-right">
     </pagination-controls>
-    
+
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images">
+      <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images | paginate: { itemsPerPage: 6, currentPage: p }">
         <div class="card">
           <a href="{{image.url}}_b.jpg">
             <img
