--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -23,7 +23,7 @@
     <div class="form-floating">
       <!-- <a [routerLink]="['/routePath']" >Forgot Password</a>
       TODO: add routerLink! -->
-      <a [routerLink]="['/routePath']" >Forgot Password</a>
+      <a href="#" >Forgot Password</a>
     </div>
     <button
       type="submit"
