Login and Register components added

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,22 +1,31 @@
 <div class="row">
   <div class="col-md-6 offset-md-3 mt-4">
-    <h3>Login</h3>
+    <h3>Register New User</h3>
 
     <div class="form-floating mb-3">
-      <label for="loginUsername">Username</label>
+      <label for="registerUsername">Username</label>
       <input
         type="text"
         class="form-control"
-        id="loginUsername"
+        id="registerUsername"
         placeholder="Enter username"
       >
     </div>
+    <div class="form-floating mb-3">
+      <label for="registerEmail">Email</label>
+      <input
+        type="text"
+        class="form-control"
+        id="registerEmail"
+        placeholder="Enter email"
+      >
+    </div>
     <div class="form-floating">
-      <label for="loginPassword">Password</label>
+      <label for="registerPassword">Password</label>
       <input
         type="password"
         class="form-control"
-        id="loginPassword"
+        id="registerPassword"
         placeholder="Password"
       >
     </div>
@@ -24,8 +33,10 @@
       type="submit"
       class="btn btn-primary"
     >
-      Login
+      Register
     </button>
+
 
   </div>
 </div>
+
