--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<app-login></app-login>
+<app-register></app-register>
+
 <app-search-images></app-search-images>
 <app-copyrights></app-copyrights>
