A lot of work should be done yet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
+<app-column-one></app-column-one>
+<!-- <router-outlet></router-outlet> -->
+
 <app-login></app-login>
 <app-register></app-register>
 
-<app-search-images></app-search-images>
-<app-copyrights></app-copyrights>
+<div class="container">
+  <app-search-images></app-search-images>
+  <app-copyrights></app-copyrights>
+</div>
