Smth with router done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-column-one></app-column-one>
-<!-- <router-outlet></router-outlet> -->
 
+<!--
 <app-login></app-login>
-<app-register></app-register>
+<app-register></app-register> -->
 
 <div class="container">
   <app-search-images></app-search-images>
