--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row loginForm">
   <div class="col-md-6 offset-md-3 mt-4">
     <h3>Login</h3>
 
@@ -20,12 +20,22 @@
         placeholder="Password"
       >
     </div>
-    <button
-      type="submit"
-      class="btn btn-primary"
-    >
-      Login
-    </button>
+    <div class="loginButtons">
+        <button
+          type="submit"
+          class="btn btn-primary"
+        >
+          Login
+        </button>
+        <button
+          type="submit"
+          class="btn btn-secondary"
+        >
+          Register
+        </button>
+    </div>
+
 
   </div>
 </div>
+
