--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,3 +1,11 @@
+.loginForm {
+  width: 500px;
+}
 .form-floating {
   margin-bottom: 15px;
+}
+
+.loginButtons {
+  display: flex;
+  gap: 10px;
 }
