Styles for login edited

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6 offset-md-3 mt-4">
     <h3>Login</h3>
 
-    <div class="form-floating mb-3">
+    <div class="form-floating mb-3 mt-4">
       <label for="loginUsername">Username</label>
       <input
         type="text"
@@ -20,7 +20,7 @@
         placeholder="Password"
       >
     </div>
-    <div class="loginButtons">
+    <div class="loginButtons mt-4">
         <button
           type="submit"
           class="btn btn-primary"
